working on patientController tests, references #1
