# NTA/src/main/java/com/CCDHB/NTA/controller/PatientController.java
@@ -71,12 +71,4 @@ public class PatientController implements PatientsApi {
         return ResponseEntity.notFound().build();
     }
 
-    @Override
-    public ResponseEntity<List<SupportPerson>> getPatientSupporters(String nhi) {
-       Patient patient = patients.get(nhi);
-       if (patient != null) {
-           return ResponseEntity.ok(patient.getSupportPersons());
-       }
-         return ResponseEntity.notFound().build();
-    }
 }
